Changed name of Prelim folder to fit scheme better

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #Ignore image files in prelim
-Prelim/*.jpg
-Prelim/*.png
-Prelim/*.ai
+2YCM_Prelim/*.jpg
+2YCM_Prelim/*.png
+2YCM_Prelim/*.ai
 
 #files to ignore from 1YCM
 1YCM/*.png
