--- a/5YCM/Makefile
+++ b/5YCM/Makefile
@@ -1,3 +1,3 @@
 5YCM_Report.pdf: 5YCM_Report.md
-	pandoc -o $@ -V geometry:margin=.90in --variable urlcolor=blue $<
+	pandoc -o $@ -V geometry:margin=.90in --biblatex --variable urlcolor=blue $<
 	pandoc -o 5YCM_Report.docx -V geometry:margin=.90in $<
