Updates to current work section and fixed bib

--- a/5YCM/Makefile
+++ b/5YCM/Makefile
@@ -1,3 +1,3 @@
 5YCM_Report.pdf: 5YCM_Report.md
-	pandoc -o $@ -V geometry:margin=.90in --biblatex --variable urlcolor=blue $<
-	pandoc -o 5YCM_Report.docx -V geometry:margin=.90in $<
+	pandoc -S -o $@ -V geometry:margin=.90in --filter pandoc-citeproc --latex-engine=xelatex --variable urlcolor=blue $<
+	pandoc -S -o 5YCM_Report.docx --filter pandoc-citeproc -V geometry:margin=.90in $<
